เพิ่มการตรวจจับ error

--- a/store/css/template-user.css
+++ b/store/css/template-user.css
@@ -1477,6 +1477,16 @@ textarea.form-input {
   }
 }
 
+/* ----------------------------------------------------
+  Logout
+---------------------------------------------------- */
+.btn-user-logout {
+  text-decoration: none;
+  background-color: #FF5722;
+  color: #ffffff;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+}
 
 /* ----------------------------------------------------
   @Media
