--- a/store/css/user/template-user.css
+++ b/store/css/user/template-user.css
@@ -963,7 +963,7 @@ Responsive Styles
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 2rem;
   width: 100%;
-  max-width: 48rem;
+  /* max-width: 48rem; */
   margin: auto;
 }
 
