--- a/store/css/template-e-store.css
+++ b/store/css/template-e-store.css
@@ -44,6 +44,36 @@ h5 {
   overflow: hidden;
 }
 
+
+.scroll-x {
+  /* display: flex; */
+  /* gap: 1rem; */
+  overflow-x: auto;   /* เปิดเลื่อนเฉพาะแนวนอน */
+  overflow-y: hidden; /* ไม่ให้เลื่อนแนวตั้ง */
+  white-space: nowrap;
+  /* padding: 1rem; */
+  /* border: 1px solid #ccc; */
+}
+
+/* แต่ง scrollbar (เฉพาะ WebKit เช่น Chrome/Edge/Safari) */
+.scroll-x::-webkit-scrollbar {
+  height: 8px; /* ความสูง scrollbar */
+}
+
+.scroll-x::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+.scroll-x::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.scroll-x::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 /*-------------------------------------------
   Breadcrumb
 -------------------------------------------*/
@@ -869,24 +899,9 @@ body.modal-open {
   white-space: nowrap;
 }
 
-.a-link-store1 {
-  text-decoration: none;
-  padding: 6px 12px;
-  display: inline-block;
-  margin-bottom: 4px;
-  border-radius: 4px;
-  color: #333;
-  transition: color 0.3s ease;
-}
-
-.a-link-store1:hover {
-  color: #ff7800;
-}
-
-
 .toggle-box-store1 {
   display: none;
-  padding: 20px;
+  padding: 10px;
   border: 1px solid #eaeaea;
   background: #fff;
   position: absolute;
@@ -894,8 +909,6 @@ body.modal-open {
   left: 0;
   z-index: 90;
   width: fit-content;
-  max-width: 100vw;
-  max-height: 100vh;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   transition: opacity 0.3s ease;
@@ -914,16 +927,21 @@ body.modal-open {
 
 .gallery-layout-store1 {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto;
+  grid-template-columns: 50% 50%;
   gap: 1rem;
 }
 
 .section-store1 {
-  border-radius: 6px;
-  padding: 10px;
-  background: #fff;
+  /* border-radius: 6px; */
+  /* padding: 10px; */
+  /* background: #fff; */
   min-height: 180px;
+}
+
+.section-store1 p {
+  word-wrap: break-word; 
+  overflow-wrap: anywhere;
+  white-space: normal;
 }
 
 .section-store1 h4 {
@@ -934,7 +952,7 @@ body.modal-open {
 
 .section-gallery-store1 {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 180px);
   gap: 8px;
 }
 
@@ -944,8 +962,23 @@ body.modal-open {
   object-fit: cover;
   border-radius: 3px;
   border: 1px solid #eaeaeacf;
-  min-width: 180px;
+  /* min-width: 180px; */
 }
+
+.a-link-store1 {
+  text-decoration: none;
+  padding: 6px 12px;
+  display: inline-block;
+  margin-bottom: 4px;
+  border-radius: 4px;
+  color: #333;
+  transition: color 0.3s ease;
+}
+
+.a-link-store1:hover {
+  color: #ff7800;
+}
+
 
 .submenu-store1 {
   display: flex;
@@ -969,7 +1002,7 @@ body.modal-open {
 @media (max-width: 768px) {
   .gallery-layout-store1 {
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto;
+    /* grid-template-rows: auto auto auto auto; */
   }
 }
 
