--- a/store/css/admin/template-admin.css
+++ b/store/css/admin/template-admin.css
@@ -1389,6 +1389,57 @@ Footer
 
 
 /* ----------------------------------------------------
+@Toggle switch
+---------------------------------------------------- */
+.toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 46px;
+    height: 24px;
+}
+
+.toggle-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    inset: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 18px;
+    width: 18px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+.toggle-switch input:checked+.slider {
+    background-color: #4caf50;
+}
+
+.toggle-switch input:checked+.slider:before {
+    transform: translateX(22px);
+}
+
+.toggle-switch input:disabled+.slider {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+
+/* ----------------------------------------------------
 @Media
 ---------------------------------------------------- */
 
