--- a/store/css/template-e-store.css
+++ b/store/css/template-e-store.css
@@ -1576,7 +1576,7 @@ body.modal-open {
 
 .cpd-md-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(204px, 1fr));
   gap: 0.7rem;
 }
 
@@ -1584,7 +1584,7 @@ body.modal-open {
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -1731,7 +1731,7 @@ body.modal-open {
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -2425,6 +2425,7 @@ body.modal-open {
   font-size: 0.9rem;
   color: #555;
   border-top: 1px solid #eaeaea;
+  margin-top: 20px;
 }
 
 .footer-nav a {
