--- a/store/css/template-e-store.css
+++ b/store/css/template-e-store.css
@@ -2,7 +2,6 @@
   --primary-color: #3498db;
   --secondary-color: #2ecc71;
   --font-family: "Noto Sans Thai", sans-serif;
-  /* --font-family: "Kanit", sans-serif; */
   --font-size: 16px;
   --line-height: 1.5;
   --bg-e-store: #f8f8f7;
@@ -2604,8 +2603,78 @@ body.modal-open {
 }
 
 
+.timeline {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    margin: 10px 0;
+    padding: 0 20px;
+}
 
+.timeline::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #ddd;
+    transform: translateY(-50%);
+    z-index: 1;
+}
 
+.timeline-step {
+    position: relative;
+    text-align: center;
+    z-index: 2;
+    flex: 1;
+    cursor: pointer;
+}
+
+.timeline-step .circle {
+    width: 30px;
+    height: 30px;
+    background-color: #dddddd;
+    border-radius: 50%;
+    margin: 0 auto 10px;
+    position: relative;
+    top: 0.8rem;
+    transition: background 0.3s;
+}
+
+.timeline-step .circle.active {
+    background-color: #FF9800;
+}
+
+.timeline-step.completed .circle {
+    background-color: #22c55e;
+}
+
+.timeline-step p {
+    margin: 0;
+    font-size: 14px;
+}
+
+.timeline-step::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -50%;
+    width: 100%;
+    height: 4px;
+    background-color: #ddd;
+    z-index: -1;
+    transform: translateY(-50%);
+    transition: background 0.3s;
+}
+
+.timeline-step.completed::after {
+    background-color: #22c55e;
+}
+
+.timeline-step:last-child::after {
+    content: none;
+}
 
 
 
