--- a/store/css/user/template-cart.css
+++ b/store/css/user/template-cart.css
@@ -1,18 +1,37 @@
+/* ==========================
+Cover Photo
+=========================== */
+/* .cart_cover_photo img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 3px;
+    border: 1px solid #ddd;
+    display: block;
+} */
 /* =========================
     CART ITEM SECTION
 ========================= */
 .cart-items-section {
     background-color: #ffffff;
-    padding: 0.5rem;
+    padding: 1rem;
     border-radius: 4px;
-    /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05); */
+    border: 1px solid #e5e7eb;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+.cart-title {
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    color: #111827;
 }
 
 .cart-view-toggle {
     display: flex;
     margin-bottom: 1rem;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .cart-view-toggle button {
@@ -66,7 +85,7 @@
     flex-direction: column;
     align-items: center;
     border: 1px solid #e5e7eb;
-    border-radius: 0.75rem;
+    border-radius: 4px;
     padding: 1rem;
 }
 
@@ -167,7 +186,8 @@
 ========================= */
 .summary-section {
     width: 100%;
-    padding: 0.5rem;
+    padding: 1rem;
+    margin-top: 0.7rem;
     background-color: #ffffff;
     border-radius: 4px;
     border: 1px solid #e5e7eb;
@@ -228,7 +248,7 @@ Service SECTION
 
 .service-section {
     width: 100%;
-    padding: 0.5rem;
+    padding: 1rem;
     margin-top: 0.7rem;
     background-color: #ffffff;
     border-radius: 4px;
@@ -256,8 +276,8 @@ delivery SECTION
 
 .delivery-section {
     width: 100%;
-    padding: 0.5rem;
-    margin-top: 0.7rem;
+    padding: 1rem;
+    /* margin-top: 0.7rem; */
     background-color: #ffffff;
     border-radius: 4px;
     border: 1px solid #e5e7eb;
@@ -303,7 +323,7 @@ DISCOUNT SECTION
 ========================= */
 .discount-section {
     margin-top: 0.7rem;
-    padding: 0.5rem;
+    padding: 1rem;
     background: #ffffff;
     border-radius: 4px;
     border: 1px solid #e5e7eb;
