--- a/store/css/user/template-cart.css
+++ b/store/css/user/template-cart.css
@@ -15,6 +15,7 @@ Cover Photo
 .cart-items-section {
     background-color: #ffffff;
     padding: 1rem;
+    margin-bottom: 0.7rem;
     border-radius: 4px;
     border: 1px solid #e5e7eb;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
