--- a/store/css/user/template-cart.css
+++ b/store/css/user/template-cart.css
@@ -324,6 +324,15 @@ delivery SECTION
     
 } */
 
+/* .summary-weight-card {
+    width: 100%;
+    padding: 1rem;
+    margin-top: 0.7rem;
+    background-color: #ffffff;
+    border-radius: 4px;
+    border: 1px solid #e5e7eb;
+} */
+
 /* =========================
 TERMS SECTION
 ========================= */
