--- a/store/css/user/template-track.css
+++ b/store/css/user/template-track.css
@@ -15,7 +15,7 @@
 }
 
 .small-text {
-    font-size: 12px;
+    font-size: 16px;
     color: #9ca3af;
 }
 
@@ -34,11 +34,12 @@
 .large-steps::before {
     content: '';
     position: absolute;
+    width: 100%;
     height: 4px;
     background: linear-gradient(to right, #22c55e var(--progress, 0%), #e5e7eb var(--progress, 0%));
     top: 25px;
-    left: 5%;
-    right: 5%;
+    /* left: 5%; */
+    /* right: 5%; */
     z-index: 0;
     transition: background 0.5s ease-in-out;
 }
@@ -68,7 +69,7 @@
 
 
 .large-step-text {
-    font-size: 14px;
+    font-size: 16px;
     color: #9ca3af;
 }
 
@@ -80,6 +81,7 @@
 .large-step-item.active .large-step-icon {
     background: #22c55e;
     border-color: #22c55e;
+    color: #ffffff;
 }
 
 .large-step-item.active .large-step-text {
@@ -150,13 +152,13 @@
 }
 
 .timeline-item .date-time {
-    font-size: 13px;
+    font-size: 12px;
     color: #4b5563;
 }
 
 .timeline-item h4 {
     margin: 0;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
     color: #1f2937;
 }
@@ -167,7 +169,7 @@
 
 .timeline-item p {
     margin: 2px 0;
-    font-size: 13px;
+    font-size: 14px;
     color: #6b7280;
 }
 
@@ -188,6 +190,7 @@
     text-align: center;
     width: 100%;
     margin-top: 20px;
+    margin-bottom: 20px;
     transition: .2s;
 }
 
